package com.kelvin.filme_note.shared.exception;

public class EntityNotFoundException {
}
