package com.kelvin.filme_note.shared.security;

public class CustomUserDetailsService {
}
